--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.3.0",
         "chart.js": "^4.2.1"
     }
 }
