--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.3.0",
-        "chart.js": "^4.2.1"
+        "chart.js": "^4.2.1",
+        "jsvectormap": "^1.5.3"
     }
 }
